GNOME Bugzilla – Bug 652010
fix exit status
Last modified: 2011-06-06 21:27:18 UTC
The meta_finalize() changes had the unintended side effect of causing gnome-shell to always exit with status 0, which meant that debugexit'ing left you with no wm rather than starting metacity+gnome-panel. (The fact that meta_display_close() calls meta_quit() is a little weird, but fixing meta_quit() to be idempotent seems right anyway.)
Created attachment 189361 [details] [review] meta_quit: ignore repeated calls after it's already quitting meta_run() calls meta_finalize() after the main loop exits, which ends up calling meta_display_close(), which calls meta_quit(META_EXIT_SUCCESS), meaning that any exit status passed to the original meta_quit() call is lost. Fix this by ignoring meta_quit() calls after the main loop is no longer running.
Review of attachment 189361 [details] [review]: Looks safe.
Attachment 189361 [details] pushed as c70087d - meta_quit: ignore repeated calls after it's already quitting